# confidential-computing.tee.dcap.poe

./: .gitignore  License.txt  Makefile  README.md  SECURITY.md  ThirdPartyLicenseIndex.txt
.github/: CODEOWNERS
.github/codeql/: codeql-config.yml
.github/workflows/: c-cpp.yml  codeql.yml  extension_dispatch_event.yml
build_infrastructure/installer/linux/: gen_release.sh
build_infrastructure/installer/linux/common/gen_source/: gen_source.py
build_infrastructure/installer/linux/common/intel-tee-poe-gen-tool/: Makefile  createTarball.sh  installConfig
build_infrastructure/installer/linux/common/intel-tee-poe-gen-tool/BOMs/: platform-ownership-endorsement-tool-package.txt  platform-ownership-endorsement-tool.txt
build_infrastructure/installer/linux/deb/intel-tee-poe-gen-tool/: build.sh  clean.sh
build_infrastructure/installer/linux/deb/intel-tee-poe-gen-tool/intel-tee-poe-gen-tool-1.0/debian/: changelog  control  postinst  postrm  rules
build_infrastructure/installer/linux/rpm/intel-tee-poe-gen-tool/: build.sh  clean.sh  intel-tee-poe-gen-tool.spec
poe-gen-tool/: .gitignore  BUILD.md  CMakeLists.txt  Makefile  README.md
poe-gen-tool/schemas/: extract-output.schema.json
poe-gen-tool/src/: POETool.cpp  utility.cpp
poe-gen-tool/src/inc/: utility.h
poe-gen-tool/test/: CMakeLists.txt  POEToolUT.cpp  UtilityUT.cpp
poe_gen_tool/: .gitignore  CMakeLists.txt  Makefile  README.md
poe_gen_tool/src/: POETool.cpp
